<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:visibility="visible"
    android:background="?attr/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/timeOfDayContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-15dp"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/whatHourItIsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/lato_light"
            android:text="@string/HWXML_hhmm"
            android:textColor="?attr/colorPrimary"
            android:textSize="40sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_below="@id/whatHourItIsTextView"
            android:layout_height="0.75dp"
            android:background="@android:color/white" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/tempContainer"
        android:layout_width="185dp"
        android:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeOfDayContainer"
        android:background="@drawable/daybar_shape">

        <TextView
            android:id="@+id/tempValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_light"
            android:text="@string/HWXML_70deg"
            android:textColor="?attr/colorPrimary"
            android:textFontWeight="1"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/minTempValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/tempValue"
            android:fontFamily="@font/lato_regular"
            android:text="@string/HWXML_min3"
            android:textColor="?attr/colorPrimary"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/maxTempValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@+id/tempValue"
            android:fontFamily="@font/lato_regular"
            android:text="@string/HWXML_max3"
            android:textColor="?attr/colorPrimary"
            android:textSize="10sp" />

        <ImageView
            android:id="@+id/weatherImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/maxTempValue"
            android:contentDescription="@string/HWXML_imageofweather"
            app:srcCompat="@drawable/ic_notifications_black_24dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/windContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tempContainer"
        android:contextClickable="true">

        <ImageView
            android:id="@+id/windLogo"
            android:layout_width="70dp"
            android:layout_height="55dp"
            android:layout_centerVertical="false"
            android:src="@drawable/icons8_wind_48"
            android:visibility="visible" />

        <TextView
            android:id="@+id/windValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/windLogo"
            android:fontFamily="@font/lato_light"
            android:text="@string/HWXML_43"
            android:textColor="?attr/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/windDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@+id/windValue"
            android:paddingTop="10dp"
            android:text="@string/HWXML_mswnw"
            android:textColor="?attr/colorPrimary" />

        <TextView
            android:id="@+id/windGustValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/windValue"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/windLogo"
            android:fontFamily="@font/lato_light"
            android:text="@string/HWXML_vindkast"
            android:textColor="?attr/colorPrimary"
            android:textSize="11sp" />

    </RelativeLayout>


</RelativeLayout>
