<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.drones.RegistrerDrone">

    <TextView
        android:id="@+id/navnTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AEDXML_dronenavn"
        app:layout_constraintBottom_toTopOf="@id/navn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/navn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/AEDXML_navn"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/vindTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/AEDXML_dronensmaksvindhastighet"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navn" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/vindstyrker"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vindTekst"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/vanntettTekst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AEDXML_erdronenvanntett"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintLeft_toRightOf="@id/vanntettTekst"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/leggTilKnapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ARDXML_leggtil"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/leggTilKnapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/splash_icon"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/vindInfoKnapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        app:backgroundTint="#009688"
        app:fabCustomSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/vindTekst"
        app:layout_constraintTop_toBottomOf="@+id/navn"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <ImageView
        android:id="@+id/lastOppBildeKnapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/sett_bilde" />

</androidx.constraintlayout.widget.ConstraintLayout>